samples/_failures_safe/1761002294_79428d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21ba466e.c: In function ‘main’:
./samples/SAFE/__tmp_21ba466e.c:155:5: error: expected declaration or statement at end of input
  155 |     }
      |     ^
